--- a/html/gmap.html
+++ b/html/gmap.html
@@ -15,7 +15,8 @@
       }
     </style>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>-->
+    <script src="qrc:/html/js/jquery.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
