--- a/html/graph.html
+++ b/html/graph.html
@@ -15,8 +15,57 @@
         </style>
         <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
         <script type="text/javascript" src="qrc:/html/js/jquery.min.js"></script>
+        <!-- <script type="text/javascript" src="js/jquery.min.js"></script> -->
         <script type="text/javascript">
+            var mousePos, mouseX = 0, mouseY = 0;
+
+            function setGraph(mX, mY) {
+                mouseX = mX;
+                mouseY = mY;
+            }
+
             $(function () {
+                document.onmousemove = handleMouseMove;
+                setInterval(getMousePosition, 100); // setInterval repeats every X ms
+
+                function handleMouseMove(event) {
+                    var dot, eventDoc, doc, body, pageX, pageY;
+
+                    event = event || window.event; // IE-ism
+
+                    // If pageX/Y aren't available and clientX/Y are,
+                    // calculate pageX/Y - logic taken from jQuery.
+                    // (This is to support old IE)
+                    if (event.pageX == null && event.clientX != null) {
+                        eventDoc = (event.target && event.target.ownerDocument) || document;
+                        doc = eventDoc.documentElement;
+                        body = eventDoc.body;
+
+                        event.pageX = event.clientX +
+                            (doc && doc.scrollLeft || body && body.scrollLeft || 0) -
+                            (doc && doc.clientLeft || body && body.clientLeft || 0);
+                        event.pageY = event.clientY +
+                            (doc && doc.scrollTop  || body && body.scrollTop  || 0) -
+                            (doc && doc.clientTop  || body && body.clientTop  || 0 );
+                    }
+
+                    mousePos = {
+                        x: event.pageX,
+                        y: event.pageY
+                    };
+                }
+
+                function getMousePosition() {
+                    var pos = mousePos;
+                    if (!pos) {
+                        // We haven't seen any movement yet
+                    } else {
+                        // Use pos.x and pos.y
+                        // mouseX = pos.x;
+                        // mouseY = pos.y;
+                    }
+                }
+
                 Highcharts.setOptions({
                     global: {
                         useUTC: false
@@ -34,15 +83,15 @@
                                     series3 = this.series[2];
                                 setInterval(function () {
                                     var x = (new Date()).getTime(); // current time
-                                    var y = Math.round(Math.random() * 100);
-                                    series1.addPoint([x, y], false, true);
+                                    // var y = Math.round(Math.random() * 100);
+                                    series1.addPoint([x, mouseX], false, true);
 
-                                    y = Math.round(Math.random() * 100);
-                                    series2.addPoint([x, y], false, true);
+                                    // y = Math.round(Math.random() * 100);
+                                    series2.addPoint([x, mouseY], true, true);
 
-                                    y = Math.round(Math.random() * 100);
-                                    series3.addPoint([x, y], true, true);
-                                }, 1000);
+                                    // y = Math.round(Math.random() * 100);
+                                    // series3.addPoint([x, y], true, true);
+                                }, 500);
                             }
                         }
                     },
@@ -74,7 +123,7 @@
 
                     series: [
                         {
-                            name: 'Data 0',
+                            name: 'Mouse X',
                             data: (function () {
                                 // generate an array of random data
                                 var data = [],
@@ -91,7 +140,7 @@
                                 return data;
                             }())
                         }, {
-                            name: 'Data 1',
+                            name: 'Mouse Y',
                             data: (function () {
                                 // generate an array of random data
                                 var data = [],
@@ -107,7 +156,7 @@
                                 }
                                 return data;
                             }())
-                        }, {
+                        }, /*{
                             name: 'Data 2',
                             data: (function () {
                                 // generate an array of random data
@@ -124,7 +173,7 @@
                                 }
                                 return data;
                             }())
-                        }
+                        } */
                     ]
                 });
             });
@@ -133,8 +182,10 @@
     <body>
         <!-- <script src="https://code.highcharts.com/stock/highstock.js"></script> -->
         <script src="qrc:/html/js/highstock.js"></script>
+        <!-- <script src="js/highstock.js"></script> -->
         <!-- <script src="https://code.highcharts.com/stock/modules/exporting.js"></script> -->
         <script src="qrc:/html/js/exporting.js"></script>
+        <!-- <script src="js/exporting.js"></script> -->
         <div id="graph"></div>
     </body>
 </html>
